branch create, note cleanup

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <br>
           <!-- loop for collection in the data -->
             {% for item in jobs_data %}
-            <!-- Mars News  -->
+            <!-- News  -->
           <h4>{{ item.jobs_news_title }}</h4>
           <p>{{ item.jobs_news_description }}</p>
           <br>
